--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,60 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".activity.LoginActivity"
         tools:ignore="RedundantNamespace">
 
-        <LinearLayout
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="?attr/actionBarSize"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:background="@color/blue"
             tools:ignore="MissingConstraints">
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/textview_login"
-                android:textSize="30sp"
-                android:textStyle="bold"
-                android:textColor="@color/blue"
+                android:layout_gravity="center"
                 android:gravity="center"
-                android:layout_gravity="top"/>
+                android:text="@string/textview_login"
+                android:textColor="@color/white"
+                android:textSize="40sp"
+                android:textStyle="bold" />
+        </androidx.appcompat.widget.Toolbar>
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:layout_margin="@dimen/margin_small"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            tools:ignore="MissingConstraints">
+
 
             <EditText
-                android:layout_margin="8dp"
                 android:id="@+id/editText_username"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/height_edittext"
+                android:layout_margin="@dimen/margin_small"
+                android:padding="@dimen/padding_small"
+                android:background="@drawable/custom_edittext"
                 android:hint="@string/hint_username"
                 android:inputType="textPersonName"
                 tools:ignore="MissingConstraints" />
 
             <EditText
                 android:id="@+id/editText_password"
-                android:layout_margin="8dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/height_edittext"
+                android:layout_margin="@dimen/margin_small"
+                android:padding="@dimen/padding_small"
+                android:background="@drawable/custom_edittext"
                 android:hint="@string/hint_password"
                 android:inputType="textPassword"
                 tools:ignore="MissingConstraints" />
 
             <Button
                 android:id="@+id/btn_login"
-                android:layout_margin="8dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/blue"
                 android:layout_gravity="center"
+                android:layout_margin="@dimen/margin_small"
+                android:backgroundTint="@color/blue"
                 android:text="@string/button_login"
                 tools:ignore="MissingConstraints" />
 
@@ -62,21 +78,23 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/textview_asforanaccount"
                     tools:ignore="MissingConstraints" />
+
                 <TextView
                     android:id="@+id/tv_move_register"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/blue"
-                    android:layout_margin="8dp"
+                    android:layout_margin="@dimen/margin_small"
                     android:text="@string/textview_register"
+                    android:textColor="@color/blue"
                     tools:ignore="MissingConstraints" />
             </LinearLayout>
 
