--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/category"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".fragment.CategoryFragment">
@@ -24,7 +25,7 @@
                 android:id="@+id/tvNameUser"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_small"
+                android:layout_marginHorizontal="@dimen/margin_small"
                 android:layout_weight="8"
                 android:text="@string/app_name"
                 android:textSize="20sp"
