fix chuyển bundle,UI

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activity.LoginActivity"
+        tools:context=".view.activity.LoginActivity"
         tools:ignore="RedundantNamespace">
 
         <androidx.appcompat.widget.Toolbar
@@ -70,6 +70,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="@dimen/margin_small"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
                 android:backgroundTint="@color/blue"
                 android:text="@string/button_login"
                 tools:ignore="MissingConstraints" />
