--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.activity.LoginActivity"
+        tools:context=".ui.activity.LoginActivity"
         tools:ignore="RedundantNamespace">
 
         <androidx.appcompat.widget.Toolbar
