--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/task"
-        tools:context=".view.fragment.TaskFragment">
+        tools:context=".ui.fragment.TaskFragment">
 
         <LinearLayout
             android:id="@+id/linearLayout2"
