--- a/app/src/main/res/layout/dialog_add_task.xml
+++ b/app/src/main/res/layout/dialog_add_task.xml
@@ -129,14 +129,15 @@
             app:layout_constraintTop_toBottomOf="@+id/textView"
             tools:ignore="Autofill,MissingConstraints" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn_Add_Task"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/button_add"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
             android:layout_margin="@dimen/margin_medium"
-            android:backgroundTint="@color/orange"
-            android:background="@drawable/custum_button"
+            android:src="@drawable/ic_add"
+            android:background="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edt_DesTask"
             tools:ignore="MissingConstraints" />
