change signin, signup ui

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,55 +2,74 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.activity.LoginActivity"
         tools:ignore="RedundantNamespace">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:background="@color/blue"
-            tools:ignore="MissingConstraints">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="@string/textview_login"
-                android:textColor="@color/white"
-                android:textSize="40sp"
-                android:textStyle="bold" />
-        </androidx.appcompat.widget.Toolbar>
-
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_margin="@dimen/margin_small"
             android:gravity="center"
             android:orientation="vertical"
-            android:layout_margin="@dimen/margin_small"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            app:layout_constraintTop_toTopOf="parent"
             tools:ignore="MissingConstraints">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxHeight="50dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@mipmap/ic_launcher" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="@dimen/margin_small"
+                    android:text="@string/app_name"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="40dp"
+                    android:layout_marginBottom="5dp"
+                    android:textSize="22sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:text="@string/sign_in"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:layout_marginBottom="@dimen/margin_medium"
+                    android:text="@string/signin_des"/>
+            </LinearLayout>
 
             <EditText
                 android:id="@+id/editText_username"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/height_edittext"
                 android:layout_margin="@dimen/margin_small"
-                android:padding="@dimen/padding_small"
                 android:background="@drawable/custom_edittext"
                 android:hint="@string/hint_username"
                 android:inputType="textPersonName"
+                android:padding="@dimen/padding_small"
                 tools:ignore="MissingConstraints" />
 
             <EditText
@@ -58,22 +77,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/height_edittext"
                 android:layout_margin="@dimen/margin_small"
-                android:padding="@dimen/padding_small"
                 android:background="@drawable/custom_edittext"
                 android:hint="@string/hint_password"
                 android:inputType="textPassword"
+                android:padding="@dimen/padding_small"
                 tools:ignore="MissingConstraints" />
 
             <Button
                 android:id="@+id/btn_login"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="@dimen/margin_small"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
                 android:backgroundTint="@color/blue"
                 android:text="@string/button_login"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
                 tools:ignore="MissingConstraints" />
 
 
