add label string

--- a/app/src/main/res/layout/dialog_confirm.xml
+++ b/app/src/main/res/layout/dialog_confirm.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center|end"
-        android:text="Xác nhận hoàn thành công việc này ?"
+        android:text="@string/label_confirm"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:layout_marginStart="20dp"
@@ -37,7 +37,7 @@
             android:id="@+id/btn_success"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Oke"
+            android:text="@string/label_oke"
             android:background="@drawable/bg_btn_success"
             android:textColor="@color/white"
             android:textAllCaps="false"
@@ -49,7 +49,7 @@
             android:id="@+id/btn_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hủy"
+            android:text="@string/label_cancel"
             android:textAllCaps="false"
             android:background="@drawable/bg_btn_success"
             android:backgroundTint="@color/dark_gray"
