--- a/app/src/main/res/layout/fragment_task_detail_doing.xml
+++ b/app/src/main/res/layout/fragment_task_detail_doing.xml
@@ -31,7 +31,7 @@
         android:id="@+id/title_name_task"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name task detail"
+        android:text=""
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -113,7 +113,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="15dp"
             android:background="@color/white"
-            android:hint="Nhập vào ghi chú..."
+            android:hint="@string/input_note"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/tv_name5"
             app:layout_constraintTop_toBottomOf="@+id/tv_name5" />
@@ -122,7 +122,7 @@
             android:id="@+id/tv_name1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tên công việc"
+            android:text="@string/label_name_task"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -134,7 +134,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Thời hạn"
+            android:text="@string/label_time_end"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -146,7 +146,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:text="Mô tả"
+            android:text="@string/label_des"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -160,7 +160,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Tự chấm điểm"
+            android:text="@string/label_score"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -172,7 +172,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Ghi chú"
+            android:text="@string/label_note"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold"
