--- a/app/src/main/res/layout/dialog_task_end.xml
+++ b/app/src/main/res/layout/dialog_task_end.xml
@@ -63,7 +63,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
-                android:text="10h 21 21/10/2023"
+                android:text=""
                 android:maxLines="1"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_name2"
@@ -99,7 +99,7 @@
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:background="@color/white"
-                android:hint="Không có ghi chú"
+                android:hint="@string/label_not_note"
                 android:text="@={task.note}"
                 android:gravity="center|start"
                 android:layout_marginTop="15dp"
@@ -111,7 +111,7 @@
                 android:id="@+id/tv_name1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tên công việc"
+                android:text="@string/label_name_task"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -123,7 +123,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:text="Thời hạn"
+                android:text="@string/label_time_end"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -134,7 +134,7 @@
                 android:id="@+id/tv_name3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Mô tả"
+                android:text="@string/label_des"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -147,7 +147,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:text="Tự chấm điểm"
+                android:text="@string/label_score"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -158,7 +158,7 @@
                 android:id="@+id/tv_name5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Ghi chú"
+                android:text="@string/label_note"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -174,7 +174,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_btn_success"
-            android:text="Hoàn thành"
+            android:text="@string/label_success"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="20sp"
