--- a/app/src/main/res/layout/itemcategory.xml
+++ b/app/src/main/res/layout/itemcategory.xml
@@ -11,7 +11,7 @@
         android:orientation="horizontal"
         tools:ignore="DisableBaselineAlignment">
 
-        <LinearLayout
+        <TextView
             android:id="@+id/status"
             android:layout_width="10dp"
             android:layout_height="match_parent"
