--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="orange">#FB9A09</color>
     <color name="boderitem">#C0BFC2</color>
     <color name="green">#3BB19C</color>
+    <color name="red">#E41212</color>
 </resources>
