--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -12,7 +12,7 @@
         android:background="@drawable/background_item_recycle"
         tools:ignore="DisableBaselineAlignment">
 
-        <LinearLayout
+        <TextView
             android:id="@+id/statusTask"
             android:layout_width="10dp"
             android:layout_height="match_parent"
